--- a/portfolio_maker/src/components/style.css
+++ b/portfolio_maker/src/components/style.css
@@ -6,12 +6,15 @@
     flex-wrap: wrap;
   }
   
+  p{
+    color: black
+  }
   .card {
     margin: 30px auto;
     width: 300px;
     height: 300px;
     border-radius: 40px;
-  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22) !important;
     cursor: pointer;
     transition: 0.4s;
   }
@@ -42,15 +45,15 @@
   .card:hover {
     transform: scale(0.9, 0.9);
     box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
-      -5px -5px 30px 15px rgba(0,0,0,0.22);
+      -5px -5px 30px 15px rgba(0,0,0,0.22) !important;
   }
   
   .title-white {
-    color: white;
+    color: white !important;
   }
   
   .title-black {
-    color: black;
+    color: black !important;
   }
   
   @media all and (max-width: 500px) {
